# rust-full-stack-workshop

./: Shuttle.toml  api.http
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs
api/lib/src/film_repository/: mod.rs  postgres_film_repository.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
shared/: Cargo.toml
