[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.168", features = ["derive"] }
sqlx = { version = "0.6.3", default-features = false, features = [
    "runtime-actix-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json"
], optional = true }
uuid = { version = "1.4.0", features = ["serde", "v4", "js"] }

[features]
backend = ["sqlx"]
