[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
async-trait = "0.1.71"
serde = "1.0.168"
serde_json = "1.0.100"
shared = { path = "../../shared", features = ["backend"] }
sqlx = { version = "0.6.3", default-features = false, features = [
    "runtime-actix-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json"
] }
tracing = "0.1.37"
uuid = { version = "1.4.0", features = ["serde", "v4", "js"] }
